AUX_SOURCE_DIRECTORY(./InsertSort DIR_LIB_SRCS1)
AUX_SOURCE_DIRECTORY(./QuickSort DIR_LIB_SRCS2)
AUX_SOURCE_DIRECTORY(./ShellSort DIR_LIB_SRCS3)
AUX_SOURCE_DIRECTORY(./MergeSort DIR_LIB_SRCS4)
AUX_SOURCE_DIRECTORY(./RadixSort DIR_LIB_SRCS5)

SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)

ADD_LIBRARY(Mylib STATIC ${DIR_LIB_SRCS1} ${DIR_LIB_SRCS2} ${DIR_LIB_SRCS3} ${DIR_LIB_SRCS4} ${DIR_LIB_SRCS5})